--- a/article.Rmd
+++ b/article.Rmd
@@ -1,25 +1,87 @@
 ---
 title: Sequential perturbations to mouse corticogenesis following in utero maternal immune activation
 editors:
-- givenNames: Editor
-  familyNames: Editor2
+- givenNames: Kathryn Song Eng
+  familyNames: Cheah
   type: Person
+  affiliations:
+  - name: The University of Hong Kong
+    address:
+      addressCountry: Hong Kong
+      type: PostalAddress
+    type: Organization
+    
+- givenNames: Anita
+  familyNames: Bhattacharyya
+  type: Person
+  affiliations:
+  - name: University of Wisconsin, Madison
+    address:
+      addressCountry: United States
+      type: PostalAddress
+    type: Organization    
+
+- givenNames: Hanna
+  familyNames: Stevens
+  type: Person
+  affiliations:
+  - name: University of Iowa
+    address:
+      addressCountry: United States
+      type: PostalAddress
+    type: Organization    
+
+datePublished:
+  value: '2021-03-19'
+  type: Date
+dateReceived:
+  value: '2020-06-16'
+  type: Date
+dateAccepted:
+  value: '2021-03-02'
+  type: Date
+  
+authors:
+- givenNames: Cesar P
+  familyNames: Canales
+  type: Person
+  emails: ccanales@ucdavis.edu
   affiliations:
   - name: UC Davis
     address:
       addressCountry: USA
+      addressLocality: Davis
       type: PostalAddress
     type: Organization
-datePublished:
-  value: '2020-11-03'
-  type: Date
-dateReceived:
-  value: '2020-06-22'
-  type: Date
-dateAccepted:
-  value: '2020-10-14'
-  type: Date
-authors:
+genre: Research Article
+
+- givenNames: Myka L
+  familyNames: Estes
+  type: Person
+  emails: 
+  affiliations:
+  - name: UC Davis
+    address:
+      addressCountry: USA
+      addressLocality: Davis
+      type: PostalAddress
+    type: Organization
+genre: Research Article
+
+- givenNames: Karol
+  familyNames: Cichewicz
+  type: Person
+  emails: kcichewicz@ucdavis.edu
+  affiliations:
+  - name: UC Davis
+    address:
+      addressCountry: USA
+      addressLocality: Davis
+      type: PostalAddress
+    type: Organization
+genre: Research Article
+  
+  
 - givenNames: Karol
   familyNames: Cichewicz
   type: Person
