--- a/article.Rmd
+++ b/article.Rmd
@@ -18,8 +18,19 @@ editors:
     address:
       addressCountry: United States
       type: PostalAddress
-    type: Organization    
+    type: Organization
 authors:
+- givenNames: Cesar
+  familyNames: Canales
+  type: Person
+  emails: ccanales@ucdavis.edu
+  affiliations:
+  - name: UC Davis
+    address:
+      addressCountry: United States
+      addressLocality: Davis
+      type: PostalAddress
+    type: Organization        
 - givenNames: Karol
   familyNames: Cichewicz
   type: Person
@@ -31,6 +42,7 @@ authors:
       addressLocality: Davis
       type: PostalAddress
     type: Organization
+    
 ---
 
 # Interactive article under construction
