--- a/elife-60100v2.rmd
+++ b/elife-60100v2.rmd
@@ -475,10 +475,6 @@ library(plyr)
 library(plotly)
 library(Hmisc)
 
-```
-
-
-```{r}
 exp.data <- read.csv("./Extra_submission files/Gene_counts.csv")
 rownames(exp.data) <- exp.data$X
 exp.data$X <- NULL
@@ -499,6 +495,198 @@ load("./Extra_submission files/exonic.gene.sizes")
 #cl <- makeCluster(detectCores())
 #exonic.gene.sizes <- parallel::parLapply(cl, #exons.list.per.gene,function(x){sum(width(reduce(x)))})
 #stopCluster(cl)
+
+sample.info_submission <- read.csv("Extra_submission files/Supplementary Table 5, RNA-seq sample metadata_03_02_2021.csv")
+
+#datatable(sample.info_submission, 
+#          rownames = FALSE, 
+#          filter = list(position = 'top', clear = FALSE, plain = FALSE), 
+#          options = list(paging = FALSE, scrollX=T, scrollY="300px", searching = FALSE))
+
+
+# Qualifies F or M based on the Xist expression
+sex.by.rna <- c(ifelse(exp.data["Xist",]>1000,"F","M")) #
+
+Xist_exp <- as.data.frame(reshape2::melt(exp.data["Xist",]))
+Xist_exp <- cbind(Xist_exp, sex.by.rna)
+Xist_exp <- arrange(Xist_exp, value)
+colnames(Xist_exp) <- c("variable", "counts", "sex.by.rna")
+
+#ggplot(Xist_exp, aes(x=sex.by.rna, y=counts, colours=sex.by.rna))+
+#  geom_jitter()+
+#  geom_boxplot(alpha=0.2)+
+#  theme_bw()+
+#  labs(title="Xist read counts", x = "", y = "Read counts")+
+#  theme(plot.title = element_text(size = rel(2), hjust=0.5))+
+#  scale_x_discrete(breaks= c("F", "M"), labels=c("Females", "Males"))
+
+
+# Calculates RPKM values
+# Gene lengths calculated with lapply
+gene.lengths <- as.numeric(lapply(1:nrow(exp.data), function(x) FUN= as.numeric(exonic.gene.sizes[rownames(exp.data)[x]])))
+
+rpkm.data <- rpkm(exp.data, gene.length=gene.lengths, log=T, prior.count=.25)
+rpkm.data_linear <- rpkm(exp.data, gene.length=gene.lengths, log=F)
+rpkm.data_linear_all <- rpkm.data_linear
+
+#write.csv(rpkm.data, file = "GEO_submission #files/rpkm_log2_24015.csv")
+#write.csv(rpkm.data_linear, file = "GEO_submission #files/rpkm_linear_24015.csv")
+
+
+### Removes genes with low expression ###
+
+# Lets plot a histogram of all rpkm values in a dataset.
+#dim(rpkm.data) #24015 rows and 74 columns
+
+df <- reshape2::melt(rpkm.data)
+df$rpkm_linear <- 2^df$value # This converts the log2 RPKM values back to linear scale
+colnames(df) <- c("gene_name", "sample", "rpkm_log2","rpkm_linear")
+
+# Histogram of all rpkm values in a dataset.
+#ggplot(df, aes(x=rpkm_log2))+ 
+#  geom_histogram(bins = 1000, color="black")+
+#  theme_bw()+
+#  labs(title="Unfiltered dataset of 24015 genes", 
+#       x="log2 RPKM", y = "Read counts")+
+#  theme(plot.title = element_text(hjust = 0.5))
+
+# Setting the threshold for minimum rpkm value in at least 2 samples. 
+threshold = -2
+
+# Number of genes after filtering
+#sum(reshape2::melt(rowSums(rpkm.data > threshold) >= 2)$value) # 17051
+
+# Let's filter the dataset and plot the histogram distribution
+keep <- as.data.frame(reshape2::melt(rowSums(rpkm.data > threshold) >= 2))
+keep$gene_name <- rownames(keep)
+keep <- filter(keep, value == "TRUE")$gene_name
+
+# NOTE: The set of included genes reported in the manuscript was determined using expression criteria from an expanded set of samples including a condition that was not used for the manuscript. The difference between the gene counts is 17195 in the manuscript from the larger set of samples, compared to 17051 genes that would pass in the set of samples used in the MIA vs. control comparison.  Note that there is no difference among DE genes passing FDR < 0.05 using either gene set.  
+
+original_exp.data <- read.csv("Extra_submission files/Count_gene_set_from_initial_submission.csv")
+
+# length(keep) # 17051
+# length(original_exp.data$gene_name) # 17195
+
+keep <- original_exp.data$gene_name
+
+# 
+datExpr_test <- as.data.frame(rpkm.data)
+datExpr_test$gene_name <- rownames(datExpr_test)
+
+# Filters the "keep" genes 
+datExpr_test <- filter(datExpr_test, gene_name %in% keep)
+
+# Generates a matrix-type data frame
+rownames(datExpr_test) <- datExpr_test$gene_name
+datExpr_test$gene_name <- NULL
+
+# Overwrites the original datExpr object.
+datExpr <- datExpr_test
+
+
+# Plots the histogram after filtering
+df <- reshape2::melt(datExpr)
+df$rpkm_linear <- 2^df$value # This converts the log2 RPKM values back to linear scale
+colnames(df) <- c("sample", "rpkm_log2","rpkm_linear")
+
+#ggplot(df, aes(x=rpkm_log2))+
+#  geom_histogram(bins = 1000, color="black")+
+#  theme_bw()+
+#  labs(title = "Dataset of 17195 genes \n after excluding genes expressed at a very low level", x="log2 #RPKM", y = "Read counts")+
+#  theme(plot.title = element_text(hjust = 0.5))
+
+
+# Removing low expression genes. Overwrites exp.data object used for DE analysis ### 
+#dim(exp.data)  #exp.data contains counts, datExpr contains rpkms 
+
+exp.data$gene_name <- rownames(exp.data)
+exp.data <- filter(exp.data, gene_name %in% rownames(datExpr))
+
+rownames(exp.data) <- exp.data$gene_name
+exp.data$gene_name <- NULL 
+
+
+# Recalculates rpkm values
+# Gene lengths calculated with lapply
+gene.lengths <- as.numeric(lapply(1:nrow(exp.data), function(x) FUN= as.numeric(exonic.gene.sizes[rownames(exp.data)[x]])))
+
+# RPKM calculation
+rpkm.data <- rpkm(exp.data, gene.length=gene.lengths, log=T, prior.count=.25)
+rpkm.data_linear <- rpkm(exp.data, gene.length=gene.lengths, log=F)
+
+
+#write.csv(rpkm.data, file = "GEO_submission #files/rpkm_log2_17051.csv")
+#write.csv(rpkm.data_linear, file = "GEO_submission #files/rpkm_linear_17051.csv")
+
+
+
+group <- ifelse(sample.info[,"Condition"]=="Saline",1,2)
+rRNA <- as.numeric(sample.info$rRNA)
+sex.by.rna <- factor(sample.info$sex.by.rna)
+dpc <- factor(sample.info$DPC)
+response <- factor(sample.info$Response)
+lane <- factor(sample.info$Lane)
+
+############################################
+
+min.cpm.criteria <- 0.1 # really relaxed
+test.data <- exp.data
+#colnames(test.data) <- paste(sample.info$ExperimentalDesign, 1:102, sep = "_")
+test.samples <- 1:nrow(sample.info)
+min.cpm <- min.cpm.criteria
+y <- DGEList(counts=test.data, group=ifelse(sample.info[,"Condition"]=="Saline",1,2))
+keep <- rowSums(cpm(y)>min.cpm) >=2 #keeps only genes expressed in above min.cpm in at least 2 libraries in each group 
+y <- y[keep, , keep.lib.sizes=FALSE]
+y <- calcNormFactors(y) # Normalizes for RNA composition
+y <- estimateCommonDisp(y) # Estimates common dispersions. Calculates pseudo-counts, a type of normalized counts. Don't misteke them with 0+x type counts from other packages. Also "users are advised not to interpret the psuedo-counts as general-purpose normalized counts".
+y <- estimateTagwiseDisp(y) #Estimates dispersions. Applicable only to experiments with single factor.
+#Alternatively the two commands from above can be replaced with y <- estimateDisp(y)
+
+
+#PCA plot
+
+global.pseudo <- y$pseudo.counts
+rownames(global.pseudo) <- rownames(y$counts) # this doesn't feel necessary because all(rownames(global.pseudo) == rownames(y$counts))
+pca.results <- prcomp(scale(log(global.pseudo+1), center=T, scale=T)) # It is a good idea to scale your variables. Otherwise the magnitude to certain variables dominates the associations between the variables in the sample.
+
+b <- data.frame(Samples=rownames(pca.results$rotation), 
+                DPC=as.character(sample.info$DPC), 
+                ExperimentalDesign=sample.info$ExperimentalDesign, 
+                Condition=sample.info$Condition,
+                sex.by.rna=sample.info$sex.by.rna,
+                rRNA=sample.info$rRNA,
+                lane=as.factor(sample.info$Lane),
+                pca.results$rotation)
+rownames(b) <- NULL
+
+b$DPC <- ifelse(b$DPC == 19.5, "P0", b$DPC)
+
+#PCA plot
+PCA_plot <- 
+  ggplot(b, aes(x=PC1, y=PC2, fill = DPC, colour=DPC, shape=Condition))+
+  geom_point(size=3, alpha=0.6, aes(shape=Condition))+
+  theme_bw()+
+  labs(title = "PCA plot")+
+  theme(plot.title = element_text(size = rel(1.5), hjust=0.5))
+
+#PCA_plot
+
+
+#PCA plot lacking lane 12 and the inhibitor samples - slightly different version
+PCA_plot_sex <- ggplot(b, aes(x=PC1, y=PC2, colour=sex.by.rna, shape=Condition))+
+  geom_point(size=3, alpha=0.6)+
+  theme_bw()+
+  labs(title = "PCA plot")+
+  theme(plot.title = element_text(size = rel(1.5), hjust=0.5))
+  
+
+#PCA_plot_sex
+
+#source("Dimensionality reduction plots.r")
+
+grid.arrange(PCA_plot, PCA_plot_sex, ncol = 2)
+
 ```
 
 
