--- a/elife-60100v2.rmd
+++ b/elife-60100v2.rmd
@@ -453,15 +453,42 @@ knitr::opts_chunk$set(message=FALSE,
 ```
 
 ```{r}
-# Installs packages if missing
+# Installs CRAN packages if missing
 
-list.of.packages <- c("sva", "RUVnormalize", "pheatmap", "edgeR", "GenomicFeatures", "mclust", "parallel", "ggplot2", "reshape2", "dplyr", "data.table", "DT", "RColorBrewer", "knitr", "ggrepel", "gridExtra", "grid", "plyr", "plotly", "Hmisc")
+list.of.packages <- c("pheatmap", 
+                      "mclust", 
+                      "parallel", 
+                      "ggplot2", 
+                      "reshape2", 
+                      "dplyr", 
+                      "data.table", 
+                      "DT", 
+                      "RColorBrewer", 
+                      "knitr", 
+                      "ggrepel", 
+                      "gridExtra", 
+                      "grid", 
+                      "plyr", 
+                      "plotly", 
+                      "Hmisc")
 
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
 if(length(new.packages)) install.packages(new.packages)
 
+new.packages
 
 lapply(list.of.packages, require, character.only = TRUE)
+
+
+# Installs Bioconductor packages
+if (!requireNamespace("BiocManager", quietly = TRUE))
+    install.packages("BiocManager")
+
+BiocManager::install(c("sva", 
+                       "RUVnormalize", 
+                       "edgeR", 
+                      "GenomicFeatures"), update = FALSE, ask = FALSE)
+
 
 
 
