--- a/elife-60100v2.rmd
+++ b/elife-60100v2.rmd
@@ -477,21 +477,20 @@ if(length(new.packages)) install.packages(new.packages)
 
 new.packages
 
-lapply(list.of.packages, require, character.only = TRUE)
-
 
 # Installs Bioconductor packages
 if (!requireNamespace("BiocManager", quietly = TRUE))
     install.packages("BiocManager")
-
-library("BiocManager")
 
 BiocManager::install(c("sva", 
                        "RUVnormalize", 
                        "edgeR", 
                       "GenomicFeatures"), update = FALSE, ask = FALSE)
 
-
+library("sva")
+library("RUVnormalize")
+library("edgeR")
+library("GenomicFeatures")
 
 
 exp.data <- read.csv("./Extra_submission files/Gene_counts.csv")
