--- a/elife-60100v2.rmd
+++ b/elife-60100v2.rmd
@@ -455,25 +455,25 @@ knitr::opts_chunk$set(message=FALSE,
 ```{r}
 # Installs CRAN packages if missing
 
-list.of.packages <- c("pheatmap", 
-                      "mclust", 
-                      "parallel", 
-                      "ggplot2", 
-                      "reshape2", 
-                      "dplyr", 
-                      "data.table", 
-                      "DT", 
-                      "RColorBrewer", 
-                      "knitr", 
-                      "ggrepel", 
-                      "gridExtra", 
-                      "grid", 
-                      "plyr", 
-                      "plotly", 
-                      "Hmisc")
+#list.of.packages <- c("pheatmap", 
+#                      "mclust", 
+#                      "parallel", 
+#                      "ggplot2", 
+#                      "reshape2", 
+#                      "dplyr", 
+#                      "data.table", 
+#                      "DT", 
+#                      "RColorBrewer", 
+#                      "knitr", 
+#                      "ggrepel", 
+#                      "gridExtra", 
+#                      "grid", 
+#                      "plyr", 
+#                      "plotly", 
+#                      "Hmisc")
 
-new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
-if(length(new.packages)) install.packages(new.packages)
+#new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
+#if(length(new.packages)) install.packages(new.packages)
 
 #new.packages
 
