--- a/elife-60100v2.rmd
+++ b/elife-60100v2.rmd
@@ -457,27 +457,11 @@ head(mtcars)
 ```{r}
 # Installs CRAN packages if missing
 
-list.of.packages <- c("pheatmap", 
-                      "mclust", 
-                      "parallel", 
-                      "ggplot2", 
-                      "reshape2", 
-                      "dplyr", 
-                      "data.table", 
-                      "DT", 
-                      "RColorBrewer", 
-                      "knitr", 
-                      "ggrepel", 
-                      "gridExtra", 
-                      "grid", 
-                      "plyr", 
-                      "plotly", 
-                      "Hmisc")
+library(ggplot2)
+library(edgeR)
 
-new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
-if(length(new.packages)) install.packages(new.packages)
+sessionInfo()
 
-head(new.packages)
 
 ```
 
